API 수정